# django-tempus-dominus

./: .coveragerc  .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  pytest.ini  setup.py  test-requirements.txt
tempus_dominus/: settings.py  utils.py  widgets.py
tempus_dominus/templates/tempus_dominus/: widget.html
tempus_dominus/tests/: test_form.py  test_utils.py
testproject/: requirements.txt
testproject/config/: settings.py  urls.py
tests/: forms.py  requirements.txt  settings.py  test_form.py  test_forms.py  test_widget.py  test_widgets.py
tests/templates/: test.html
