[build-system]
requires = ["setuptools>=67", "setuptools_scm>=7", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "tempus_dominus/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["django-tempus-dominus"]

[project]
name = "django-tempus-dominus"
authors = [{name = "Timothy Allen", email = "tallen@wharton.upenn.edu"},]
description = "A Django widget for the Tempus Dominus DateTime picker."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["django", "datepicker", "datetime", "date"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/FlipperPA/django-tempus-dominus"
"Repository" = "https://github.com/FlipperPA/django-tempus-dominus"
"Documentation" = "https://github.com/FlipperPA/django-tempus-dominus"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
